# libpressio_dataset

./: .gitattributes  CMakeLists.txt  LibPressioDatasetConfig.cmake.in  README.markdown  libpressio_dataset.pc.in  libpressio_datasetConfig.cmake.in
include/: libpressio_dataset.h
include/libpressio_dataset_ext/: loader.h
src/: cleanup.h  libpressio_dataset.cc  libpressio_dataset_version.h.in
src/plugins/dataset_loader/: block_sampler.cc  block_slicer.cc  cache_loader.cc  folder_loader.cc  from_data.cc  hdf5_loader.cc  io_loader.cc  loader_base.cc  pressio.cc  random_sampler.cc
test/: CMakeLists.txt  test_libpressio_dataset.c  test_libpressio_dataset.cc
test/datasets/: s0-CLOUDf48.log10.bin.f32  s0-PRECIPf48.bin.f32  s0-PRECIPf48.log10.bin.f32  s0-Pf48.bin.f32  s0-QCLOUDf48.log10.bin.f32  s0-QGRAUPf48.bin.f32  s0-QGRAUPf48.log10.bin.f32  s0-QICEf48.log10.bin.f32  s0-QRAINf48.bin.f32  s0-QRAINf48.log10.bin.f32  s0-QSNOWf48.bin.f32  s0-QSNOWf48.log10.bin.f32  s0-QVAPORf48.bin.f32  s0-TCf48.bin.f32  s0-Uf48.bin.f32  s0-Vf48.bin.f32  s0-Wf48.bin.f32  s50-CLOUDf48.bin.f32  s50-CLOUDf48.log10.bin.f32  s50-PRECIPf48.bin.f32  s50-PRECIPf48.log10.bin.f32  s50-Pf48.bin.f32  s50-QCLOUDf48.bin.f32  s50-QCLOUDf48.log10.bin.f32  s50-QGRAUPf48.bin.f32  s50-QGRAUPf48.log10.bin.f32  s50-QICEf48.bin.f32  s50-QICEf48.log10.bin.f32  s50-QRAINf48.bin.f32  s50-QRAINf48.log10.bin.f32  s50-QSNOWf48.bin.f32  s50-QSNOWf48.log10.bin.f32  s50-QVAPORf48.bin.f32  s50-TCf48.bin.f32  s50-Uf48.bin.f32  s50-Vf48.bin.f32  s50-Wf48.bin.f32
